--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,18 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.counter-holder{
+    text-align: center;
+    background: black;
+}
+
+
+.secoundscounter{
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    background: #101010;
+    color: white;
+    padding: 10px;
+    margin: 3px;
+}
